--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Altered Sounds
+author=daanbom
+support=https://github.com/daanbom/AlteredSounds
+description=alter sounds for drops you get
+tags=sound, drop, effect, alter
+plugins=org.AlteredSound.AlteredSounds
