--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Altered Sounds
+displayName=Custom Drop Sounds
 author=daanbom
-support=https://github.com/daanbom/AlteredSounds
-description=alter sounds for drops you get
-tags=sound, drop, effect, alter
-plugins=org.AlteredSound.AlteredSounds
+support=https://github.com/daanbom/Custom-Drops-Sounds
+description=custom sounds for drops you get
+tags=sound, drop, effect, alter, custom
+plugins=org.CustomDropSounds.CustomDropsSoundsPlugin
