--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=daanbom
 support=https://github.com/daanbom/Custom-Drops-Sounds
 description=custom sounds for drops you get
 tags=sound, drop, effect, alter, custom
-plugins=org.CustomDropSounds.CustomDropsSoundsPlugin
+plugins=org.CustomDropsSounds.CustomDropsSoundsPlugin
